--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-hello world
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Mariia Taguer</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/wingcss" />
+    <style>
+        html,
+        body {
+            font-family: 'Lora', serif;
+        }
+    </style>
+</head>
+
+
+<body>
+    <section class="container">
+        <h1 class="header"> Mariia Taguer</h1>
+        <p class="content"> PhD Candidate</p>
+    </section>
+
+
+</body>
+
+
+
+</html>
